# synpuf-utilities

./: .gitignore  CLAUDE.md  file01_background.md  file10_demo.md  file10_system.md  file20_instructionalsteps.md  pyproject.toml  readme.md
descriptive_statistics/: descriptive_stats.csv
docs/: scdm-prepare-usage.md
docs/design-plans/: 2026-02-10-scdm-prepare.md  2026-02-10-synpuf-python-tools.md
docs/implementation-plans/2026-02-10-scdm-prepare/: phase_01.md  phase_02.md  phase_03.md  phase_04.md  phase_05.md  phase_06.md  test-requirements.md
docs/test-plans/: 2026-02-10-scdm-prepare.md
files/: file01_background.md  file10_system.md  file20_instructionalsteps.md
files/translational_code/macros/: prepare_scdm.sas  run_everything.sas  step_a_process_bene_file.sas  step_e_process_ip_file.sas  step_f_final_processing.sas
inputfiles/: ed_codes.sas7bdat  home_codes.sas7bdat  is_codes.sas7bdat
inputfiles/macros/: assign_idvar.sas  codetype_algorithm.sas  step_b_process_pde_file.sas  step_c_process_op_file.sas
sasprograms/: translate_synpufs_to_scdm.sas
src/scdm_prepare/: CLAUDE.md  __init__.py  cli.py  export.py  ingest.py  progress.py  schema.py  transform.py
synpuf_export/sasprograms/: synpuf_export.sas
synpuf_tools/inputfiles/: translate_cms_to_zip.sas7bdat
synpuf_tools/sasprograms/: prepare_scdm.sas
tests/: conftest.py  test_cli.py  test_export.py  test_ingest.py  test_schema.py  test_transform.py
translational_code/inputfiles/: clinical_codes.sas7bdat
translational_code/sasprograms/: prepare_scdm.sas  translate_synpufs_to_scdm.sas
(+19 files in other folders)
