[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scdm-prepare"
version = "0.1.0"
description = "Combine SynPUF subsamples into standardised SCDM tables"
readme = "readme.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.4",
    "polars>=1.38",
    "pyarrow>=14.0",
    "pyreadstat>=1.3",
    "typer[all]>=0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
scdm-prepare = "scdm_prepare.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/scdm_prepare"]
